sandbox/output
GildedRoseTest.java:42: error: method updateItemsQualityAndSellIn in class GildedRose cannot be applied to given types;
            GildedRose.updateItemsQualityAndSellIn(items, 
                      ^
  required: List<Item>
  found: List<Item>,Predicate<Item>,Predicate<Item>,Function<Item,Item>
  reason: actual and formal argument lists differ in length
1 error
